--- a/src/common/pages/transaction/transactions.scss
+++ b/src/common/pages/transaction/transactions.scss
@@ -18,4 +18,10 @@
       .card-header-sort{
         width: 110px;
       }
+      .col-w-240{
+        width: 240px !important;
+      }
+      .col-w-110{
+        width: 110x !important;
+      }
 }
